# project_classification

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt  test_korean_input.py
.claude/agents/: code-evaluator.md  code-reviewer.md  documenter.md  history-documenter.md  kedro-architecture-designer.md  kedro-pipeline-developer.md  pipeline-developer.md  project-manager.md  task-manager.md
.claude/agents/.claude/agents/: kedro-documenter.md  project-manager.md
account-tax/: .gitignore  AGENTS.md  CLAUDE.md  README.md  check_mlflow_context.py  dependency-tree.txt  diagnose_hook.py  diagnose_training_speed.py  pyproject.toml  requirements.txt  requirements_frozen.txt  solution_comparison.md  test_mlflow_upload.py  test_subprocess_context.py  test_training_configs.py
account-tax/.claude/agents/: architecture.md  developer.md  evaluator.md  manager.md
account-tax/.claude/agents/.claude/agents/: kedro-pipeline-developer.md  pipeline-evaluator.md
account-tax/conf/base/: catalog.yml  globals.yml  logging.yml  mlflow.yml
account-tax/conf/base/parameters/: data.yml  inference_pipeline.yml  train_pipeline.yml  training.yml
account-tax/conf/repro/: catalog.yml  mlflow.yml
account-tax/conf/repro/parameters/: data.yml  training.yml
account-tax/docs/: analysis.md  analysis_main_yaml.md  architecture.md  concept.md  data_pipeline_review.md  dtype_refactoring_summary.md  efficiency_review.md  history.md  lora_target_modules_analysis.md  pipeline_timing_report.md  rawdata-dataset.md  review.md  session_history_dtype_refactoring.md  task.md  train_bluescreen.md  training_improvements.md  training_speed_analysis.md
account-tax/docs/temp/: implementation_strategy.md  model_architect.md  train_dev_note.md  train_develop.md
account-tax/notebooks/: README.md  explore_project.ipynb  load_intermediate_outputs.py  template.ipynb
account-tax/scripts/: compare_qwen_models.py  migrate_to_qwen25_7b.sh  test_qwen3_8b.py
account-tax/src/account_tax/: __init__.py  __main__.py  pipeline_registry.py  settings.py  utils.py
account-tax/src/account_tax/datasets/: partitioned_parquet.py
account-tax/src/account_tax/pipelines/evaluation/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/pipelines/feature/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/pipelines/ingestion/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/pipelines/preprocess/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/pipelines/split/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/pipelines/train/: __init__.py  nodes.py  pipeline.py
account-tax/src/account_tax/utils/: __init__.py  class_weighting.py  common.py  korean_normalizer.py
account-tax/src/train/: main_yaml.py
account-tax/tests/train/: test_training_blocks.py
account-tax/tools/: profile_pipeline.py
backup/conf/base/: catalog.yml  deepspeed.yml  inference.yml  mlflow.yml  parameters.yml
backup/conf/local/: parameters_acct_code  parameters_vat_type
backup/data/: columns_mapping.json  label_mapping_acct_code.json  label_mapping_cp_acct_code.json  label_mapping_vat_type.json
backup/src/: hooks.py  pipeline_registry.py  settings.py
backup/src/model_training/: debug_utils.py  deepspeed_trainer.py  train.py  utils.py
backup/src/pipelines/: __init__.py  settings.py  visualize_token_distribution.py
backup/src/pipelines/data/: __init__.py  data_nodes.py  data_pipeline.py  util.py
docs/: actual_training_problem_diagnosis.md  backup_vs_current_checklist.md  class_filtering_comparison.md  critical_performance_fixes.md  data_quality_issues.md  optimization_verification_results.md  real_problem_gradient_explosion.md  training_config_comparison.md  training_speed_comparison.md  why_minority_classes_slow_convergence.md
