[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    # ── Jupyter/IPython (kedro-viz 12.0.0과 호환: ipython<9.0)
    "ipykernel==6.30.1",
    "ipython==8.26.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab>=4.4.7",
    # ── Kedro & Datasets & Viz
    "kedro>=1.0.0",
    "kedro-datasets>=8.1.0",
    "kedro-viz==12.0.0",
    # ── Flask/Jinja2 웹스택 (jinja2.escape ImportError 방지)
    "flask>=3.0",
    "jinja2>=3.1.4",
    "markupsafe>=2.1.3",
    "werkzeug>=3.0",
    # ── 과학/시각화
    "matplotlib>=3.10.6",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "notebook>=7.4.5",
    "openpyxl==3.1.5",
    "packaging>=24.0,<25.0",
    "pandas>=2.3.2",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pip==25.2",
    "platformdirs==4.4.0",
    "plotly>=6.3.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow>=19.0.0,<20.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "wcwidth==0.2.13",
    "pyspark>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.4.5",
    "jupyterlab>=4.4.7",
    "ipykernel==6.30.1",
    "ipython==8.26.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "pyzmq==27.1.0",
    "tornado==6.5.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────
# 패키지 디스커버리: Project 루트만 대상으로
# spaceflights, 데이터, 작업 등 여러 폴더 중
# 실제 패키지는 Project 루트 하위만 인식하도록 제한
# ──────────────────────────────────────────────
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["project*"]
exclude = ["spaceflights*", "데이터*", "작업*"]

[tool.uv.workspace]
members = [
    "minikedro",
]
