[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "account-tax"
version = "0.1.0"
description = "Simplified account classification pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kedro>=0.18.0",
    "kedro-datasets>=1.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
account-tax = "account_tax.__main__:main"

[tool.kedro]
project_name = "account_tax"
package_name = "account_tax"
source_dir = "src"
kedro_init_version = "1.0.0"

[tool.kedro_telemetry]
project_id = "bbc6c154909c44cab9f445f663ecf1b0"
