[project]
name = "account-tax"
version = "0.1.0"
description = "Account classification pipeline with Kedro"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "kedro>=1.0.0",
    "kedro-datasets>=8.1.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
account-tax = "account_tax.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["account_tax*"]

[tool.kedro]
project_name = "account_tax"
package_name = "account_tax"
source_dir = "src"
kedro_init_version = "1.0.0"

[tool.kedro_telemetry]
project_id = "bbc6c154909c44cab9f445f663ecf1b0"
